--- a/src/components/ui/PageSection.astro
+++ b/src/components/ui/PageSection.astro
@@ -1,3 +1,3 @@
-<section class="container max-w-6xl mx-auto w-screen p-6 flex flex-col">
+<section class="container max-w-6xl mx-auto p-6 flex flex-col">
 	<slot />
 </section>
