--- a/src/layouts/LayoutPages.astro
+++ b/src/layouts/LayoutPages.astro
@@ -17,7 +17,7 @@ const { title, description } = Astro.props;
 		<meta name="description" content={description} />
 		<title>{title}</title>
 	</head>
-	<body class="w-screen md:mx-auto overflow-x-hidden">
+	<body class="md:mx-auto overflow-x-hidden">
 		<Header />
 		<PageSection>
 			<slot />
