--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,7 @@ import { Image } from "astro:assets";
 <header class="bg-contrast text-black  p-4">
 	<nav class=" max-w-7xl mx-auto flex flex-row justify-around items-center">
 		<div class="inline-block">
+			<a href="/">
 			<Image
 				src="/images/logo.webp"
 				alt="logo de la empresa"
@@ -12,7 +13,7 @@ import { Image } from "astro:assets";
 				height={200}
 				class="inline-flex w-1xl"
 				loading="eager"
-			/>
+			/></a>
 		</div>
 		<ul
 			class="hidden md:flex md:flex-row md:justify-between md:items-center md:grow-[0.5] text-white"
