feat: change info section

--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -1,12 +1,64 @@
 ---
 import Section from "@/components/ui/Section.astro";
+import { Image } from "astro:assets";
 ---
 
-<Section bgColor="bg-white md:bg-green-200" textColor="text-black">
-	<h1 class="mb-7 text-2xl">CATEGORIAS DE OBRAS</h1>
-	<h2>Residencial</h2>
-	<h2>Rehabilitacion</h2>
-	<h2>Equipamientos</h2>
-	<h2>Obra civil</h2>
-	<h2>Retail</h2>
+<Section bgColor="bg-gray-200" textColor="text-black">
+	<h2 class="mb-7 md:my-4 text-2xl font-semibold">CATEGORIAS DE OBRAS</h2>
+
+	<div
+		class="grid grid-cols-1 gap-y-4 md:grid-cols-3 md:grid-rows-1 md:gap-x-4 mb-4"
+	>
+		<div class="bg-gray-100  p-3 rounded-lg shadow-2xl hover:bg-primary-500">
+			<Image
+				src="/images/icon1.png"
+				alt="Untitled design"
+				class="md:hidden"
+				width={50}
+				height={50}
+			/>
+			<div class="text-left">
+				<h3 class="text-2xl font-semibold">
+					<a href="/servicios/" tabindex="0">Estilo de proyectos</a>
+				</h3><p>
+					Transformar espacios existentes en ambientes funcionales,
+					adaptados a las necesidades de los clientes.
+				</p>
+			</div>
+		</div>
+		<div class="bg-gray-100  p-3 rounded-lg shadow-2xl hover:bg-primary-500">
+			<Image
+				src="/images/icon2.png"
+				alt="Untitled design"
+				class="md:hidden"
+				width={50}
+				height={50}
+			/>
+			<div class="text-left">
+				<h3 class="text-2xl font-semibold">
+					<a href="/servicios/" tabindex="0">Diseño de Interiores</a>
+				</h3><p>
+					Optimizar los espacios al aire libre, creando entornos
+					armoniosos, atractivos y completamente funcionales..
+				</p>
+			</div>
+		</div>
+		<div class="bg-gray-100  p-3 rounded-lg shadow-2xl hover:bg-primary-500">
+			<Image
+				src="/images/icon3.png"
+				alt="Untitled design"
+				class="md:hidden"
+				width={50}
+				height={50}
+			/>
+			<div class="text-left">
+				<h3 class="text-2xl font-semibold">
+					<a href="/servicios/" tabindex="0">Diseño de Exteriores</a>
+				</h3><p>
+					Optimizar los espacios al aire libre, creando entornos
+					armoniosos, atractivos y completamente funcionales.
+				</p>
+			</div>
+		</div>
+	</div>
 </Section>
