feat: add css variables for color

--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -2,9 +2,7 @@
 import { Image } from "astro:assets";
 ---
 
-<section
-	class="bg-white md:bg-orange-400 md:overflow-hidden p-4 md:p-0"
->
+<section class="bg-gray-200 md:overflow-hidden p-4 md:p-0">
 	<Image
 		src="/images/JPV-Galeria-1.webp"
 		alt="Hombre haciendo reformas"
