--- a/src/components/Obras.astro
+++ b/src/components/Obras.astro
@@ -3,10 +3,10 @@ import { Image } from "astro:assets";
 ---
 
 <section
-	class="bg-white md:bg-red-400 text-black grid grid-cols-3 grid-rows-3 md:gap-x-0 gap-y-0"
+	class="bg-gray-200 text-black grid grid-cols-3 grid-rows-3 md:gap-x-0 gap-y-0"
 >
-	<div class="col-span-3 row-span-1 md:p-4 content-center text-center">
-		<h1 class="mb-4 text-2xl">RESIDENCIAL</h1>
+	<div class="col-span-3 row-span-1 md:p-4 content-center text-center px-4">
+		<h2 class="mb-4 text-2xl">RESIDENCIAL</h2>
 		<p>
 			¿Cómo imaginas tu casa? ¿Un piso con techos altos y terraza? ¿Una
 			casa con jardín y piscina? Esta es una selección de los hogares que
