--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -2,7 +2,10 @@
 import Section from "@/components/ui/Section.astro";
 ---
 
-<Section bgColor="bg-contrast md:bg-blue-400" textColor="text-white">
+<Section
+	bgColor="bg-gray-200 md:bg-gray-200"
+	textColor="text-black md:text-black"
+>
 	<div class="text-left">
 		<h1 class="font-bold">
 			Más de 20 años siendo tu empresa de obras y servicios.
@@ -30,7 +33,8 @@ import Section from "@/components/ui/Section.astro";
 </Section>
 
 <style>
-	p, h1 {
-		margin: 6px 0 6px 0
+	p,
+	h1 {
+		margin: 6px 0 6px 0;
 	}
 </style>
