--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -4,7 +4,7 @@ import LayoutPages from "@/layouts/LayoutPages.astro";
 
 <LayoutPages title="Nosotros" description="Conoce más sobre Assessors tecnics">
 	<h1
-		class="text-blue-400 text-right border-blue-400 border-b font-bold text-3xl"
+		class="text-primary-500 text-right border-primary-500 border-b font-bold text-3xl"
 	>
 		Assessors tecnics, expertos en rehabilitacion y reformas
 	</h1>
@@ -14,12 +14,10 @@ import LayoutPages from "@/layouts/LayoutPages.astro";
 	<p class="my-4 text-pretty">
 		<strong>Assessors tecnics </strong>es una empresa especializada en<strong
 		>
-			rehabilitación de edificios y reformas</strong
-		>, que fue fundada en el año 2005 por Oscar Barcala Avedillo. Desde
-		entonces, nuestra empresa ha evolucionado y se ha consolidado como un
-		referente en el sector de la construcción, gracias a nuestro compromiso
-		con la excelencia y la calidad en cada uno de los proyectos que
-		emprendemos.
+			rehabilitación de edificios y reformas.</strong
+		> Desde entonces, nuestra empresa ha evolucionado y se ha consolidado como
+		un referente en el sector de la construcción, gracias a nuestro compromiso
+		con la excelencia y la calidad en cada uno de los proyectos que emprendemos.
 	</p>
 	<p class="my-4 text-pretty">
 		En Assessors tecnics contamos con un equipo de
@@ -32,29 +30,47 @@ import LayoutPages from "@/layouts/LayoutPages.astro";
 		los más altos estándares de calidad y seguridad.
 	</p>
 	<p class="my-4 text-pretty">
-		Nos diferenciamos por nuestra capacidad para realizar proyectos de
-		rehabilitación de edificios, que nos permiten
+		Nos especializamos en transformar espacios en entornos funcionales,
+		estéticos y modernos,
 		<strong
-			>recuperar y poner en valor el patrimonio arquitectónico y cultural.</strong
+			>adaptándonos a las necesidades específicas de cada cliente.</strong
 		>
 		También somos <strong
 			>expertos en reformas de viviendas, locales comerciales y oficinas,
 		</strong>y en la realización de obras de nueva construcción.
 	</p>
 	<p class="my-4 text-pretty">
-		Además, en Assessors tecnics estamos <strong
-			>comprometidos con el medio ambiente y la sostenibilidad</strong
+		Además, <strong>nuestros servicios de yeso</strong> se enfocan en proporcionar
+		acabados perfectos y<strong> soluciones efectivas</strong>
+		para problemas como grietas, imperfecciones y paredes envejecidas. Usamos
+		técnicas avanzadas y <strong>materiales de calidad </strong>para
+		garantizar resultados duraderos y <strong
+			>estéticamente impecables.</strong
 		>, y por ello utilizamos materiales y técnicas de construcción
-		respetuosas con el entorno. Asimismo, ofrecemos servicios de
-		asesoramiento y gestión de subvenciones y ayudas para la rehabilitación
-		y mejora de edificios.
+		respetuosas con el entorno. Asimismo, ofrecemos <strong
+			>servicios de asesoramiento y gestión de subvenciones</strong
+		>
+		y ayudas para la rehabilitación y mejora de edificios.
 	</p>
 	<p class="my-4 text-pretty">
-		En definitiva, en Assessors tecnics trabajamos con
-		<strong>pasión y dedicación</strong>
-		para satisfacer las necesidades de nuestros clientes, y convertir sus proyectos
-		en realidades. Si buscas una empresa de confianza para llevar a cabo tu proyecto
-		de rehabilitación o reforma, no dudes en ponerte en contacto con nosotros.
-		Estaremos encantados de ayudarte.
+		Tambiém contamos con <strong
+			>profesionales en nuestros servicios de pladur,</strong
+		> que es una solución <strong>versátil y moderna </strong> que nos permite
+		transformar espacios con <strong>rapidez y eficiencia. </strong>En
+		Assessors tecnics somos especialistas en la instalación de sistemas de
+		pladur tanto en viviendas como en proyectos comerciales. Nos adaptamos a
+		cada proyecto para ofrecer <strong>resultados funcionales</strong>,
+		estéticos y con propiedades adicionales como <strong
+			>aislamiento térmico y acústico.
+		</strong>
+		<p class="my-4 text-pretty">
+			En definitiva, en Assessors tecnics trabajamos con
+			<strong>pasión y dedicación</strong>
+			para satisfacer las necesidades de nuestros clientes, y convertir sus
+			proyectos en realidades. Si buscas una empresa de confianza para llevar
+			a cabo tu proyecto de rehabilitación o reforma, no dudes en ponerte en
+			<strong>contacto con nosotros. </strong>Estaremos encantados de
+			ayudarte.
+		</p>
 	</p>
 </LayoutPages>
