--- a/src/pages/obras.astro
+++ b/src/pages/obras.astro
@@ -8,7 +8,7 @@ import { Image } from "astro:assets";
 	description="Descubre algunos de nuestros trabajaos realizados a lo largo de estos años"
 >
 		<h1
-			class="text-blue-400 text-right border-blue-400 border-b font-bold text-3xl"
+			class="text-primary-500 text-right border-primary-500 border-b font-bold text-3xl"
 		>
 			Descubre como trabajamos
 		</h1>
