--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -67,15 +67,15 @@ const articles = [
 	description="Servicios de rehabilitación y reformas integrales para edificios, locales y viviendas."
 >
 	<h1
-		class="text-blue-400 text-right border-blue-400 border-b font-bold text-3xl"
+		class="text-primary-500 text-right border-primary-500 border-b font-bold text-3xl"
 	>
 		La mejora de tus espacios está en nuestras manos
 	</h1>
 	<h2 class="text-2xl font-semibold my-10 text-center">
 		Assessors tecnics ofrece servicios de rehabilitación y reformas
-		integrales para edificios, locales y viviendas. Con una amplia
-		experiencia en el sector, proporcionamos soluciones personalizadas y de
-		alta calidad, adaptadas a las necesidades de cada cliente.
+		integrales para edificios, locales y viviendas. Nos especializamos en
+		transformar espacios en entornos funcionales, estéticos y modernos,
+		adaptándonos a las necesidades específicas de cada cliente.
 	</h2>
 	<div class="grid md:grid-cols-2 gap-y-8 md:gap-x-4">
 		{
