feat: add form into promociones section

--- a/src/components/Promociones.astro
+++ b/src/components/Promociones.astro
@@ -1,15 +1,12 @@
 ---
 import Section from "@/components/ui/Section.astro";
+import Form from "@/components/ui/Form.astro";
 ---
 
 <Section
 	bgColor="bg-contrast md:bg-gray-600"
-	textColor="text-white md:text-white"
+	textColor="text-white"
+	justify="left"
 >
-	<h1 class="my-7 text-2xl">PROMOCIONES</h1>
-	<p>
-		Desde polideportivos a guarderías pasando por bibliotecas, centros de
-		atención primaria o mercados municipales. Ya se trate de construcciones
-		integrales, ampliaciones o reformas.
-	</p>
+	<Form color="white" />
 </Section>
