--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -1,24 +1,27 @@
-<form>
-	<div class="border-b border-gray-900/10 pb-12 my-7">
-		<h2 class="text-base/7 font-semibold text-gray-900">
-			Déjanos tus datos
-		</h2>
+---
+const { color } = Astro.props;
+---
 
-		<div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+<form class="md:px-4 w-full">
+	<div class="border-b border-gray-900/10 ">
+		<h1 class=`text-2xl text-${color}`>DEJANOS TUS DUDAS</h1>
+
+		<div class="mt-10 grid grid-cols-1 gap-x-6 md:gap-x-4 gap-y-8 sm:grid-cols-6">
 			<div class="sm:col-span-3">
 				<label
 					for="name"
-					class="block text-sm/6 font-medium text-gray-900"
+					class=`block text-sm/6 font-medium text-${color}`
 					>Nombre</label
 				>
 				<div class="mt-2">
 					<input
+						required
 						type="text"
 						placeholder="Nombre"
 						name="name"
 						id="name"
 						autocomplete="given-name"
-						class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6"
+						class=`block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6`
 					/>
 				</div>
 			</div>
@@ -26,11 +29,12 @@
 			<div class="sm:col-span-3">
 				<label
 					for="email"
-					class="block text-sm/6 font-medium text-gray-900"
+					class=`block text-sm/6 font-medium text-${color}`
 					>Email</label
 				>
 				<div class="mt-2">
 					<input
+						required
 						type="email"
 						placeholder="Email"
 						name="email"
@@ -44,11 +48,12 @@
 			<div class="col-span-full">
 				<label
 					for="asunto"
-					class="block text-sm/6 font-medium text-gray-900"
+					class="block text-sm/6 font-medium text-${color}"
 					>Asunto</label
 				>
 				<div class="mt-2">
 					<input
+						required
 						type="text"
 						placeholder="Asunto"
 						name="asunto"
@@ -61,7 +66,7 @@
 			<div class="col-span-full">
 				<label
 					for="about"
-					class="block text-sm/6 font-medium text-gray-900"
+					class="block text-sm/6 font-medium text-${color}"
 					>Mensaje</label
 				>
 				<div class="mt-2">
@@ -78,7 +83,7 @@
 		<div class="mt-6 flex items-center justify-end">
 			<button
 				type="submit"
-				class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+				class="rounded-md bg-primary-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-primary-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary-600"
 				>Enviar</button
 			>
 		</div>
