--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from "@/layouts/Layout.astro";
 
 <Layout>
 	<div
-		class="md:max-[800px] mx-auto flex items-center justify-center container md:px-4"
+		class="mx-auto flex items-center justify-center "
 	>
 		<div class="md:grid md:grid-cols-6 md:grid-rows-8">
 			<div class="md:row-span-3 md:col-span-4"><Obras /></div>
