--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="bg-contrast text-white w-screen p-4">
+<footer class="bg-contrast text-white p-4">
 	<nav class="container mx-auto">
 		<ul class="flex flex-col md:flex-row md:justify-center md:items-center">
 			<li class="md:mr-2">
