--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import "@/styles/global.css";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
-import "@fontsource-variable/montserrat"; 
+import "@fontsource-variable/montserrat";
 import "@fontsource-variable/karla";
 ---
 
@@ -18,7 +18,7 @@ import "@fontsource-variable/karla";
 		/>
 		<title>Assessors tecnics</title>
 	</head>
-	<body class="w-screen mx-auto">
+	<body class=" ">
 		<Header />
 		<slot />
 		<Footer />
