--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -2,17 +2,17 @@
 import LayoutPages from "@/layouts/LayoutPages.astro";
 ---
 
-<LayoutPages title="Nosotros" description="Conoce más sobre Assessors tecnics">
+<LayoutPages title="Nosotros" description="Conoce más sobre ASSESSORS TECNICS">
 	<h1
 		class="text-primary-500 text-right border-primary-500 border-b font-bold text-3xl"
 	>
-		Assessors tecnics, expertos en rehabilitacion y reformas
+		ASSESSORS TECNICS, expertos en rehabilitacion y reformas
 	</h1>
 	<h2 class="text-3xl font-semibold my-10 text-center">
 		Creemos en lo que hacemos
 	</h2>
 	<p class="my-4 text-pretty">
-		<strong>Assessors tecnics </strong>es una empresa especializada en<strong
+		<strong>ASSESSORS TECNICS </strong>es una empresa especializada en<strong
 		>
 			rehabilitación de edificios y reformas.</strong
 		> Desde entonces, nuestra empresa ha evolucionado y se ha consolidado como
@@ -20,7 +20,7 @@ import LayoutPages from "@/layouts/LayoutPages.astro";
 		con la excelencia y la calidad en cada uno de los proyectos que emprendemos.
 	</p>
 	<p class="my-4 text-pretty">
-		En Assessors tecnics contamos con un equipo de
+		En ASSESSORS TECNICS contamos con un equipo de
 		<strong>profesionales altamente cualificados y experimentados</strong>,
 		que nos permite abordar cualquier tipo de proyecto, desde pequeñas
 		reformas hasta la ejecución de grandes obras. Nuestro objetivo es
@@ -57,14 +57,14 @@ import LayoutPages from "@/layouts/LayoutPages.astro";
 			>profesionales en nuestros servicios de pladur,</strong
 		> que es una solución <strong>versátil y moderna </strong> que nos permite
 		transformar espacios con <strong>rapidez y eficiencia. </strong>En
-		Assessors tecnics somos especialistas en la instalación de sistemas de
+		ASSESSORS TECNICS somos especialistas en la instalación de sistemas de
 		pladur tanto en viviendas como en proyectos comerciales. Nos adaptamos a
 		cada proyecto para ofrecer <strong>resultados funcionales</strong>,
 		estéticos y con propiedades adicionales como <strong
 			>aislamiento térmico y acústico.
 		</strong>
 		<p class="my-4 text-pretty">
-			En definitiva, en Assessors tecnics trabajamos con
+			En definitiva, en ASSESSORS TECNICS trabajamos con
 			<strong>pasión y dedicación</strong>
 			para satisfacer las necesidades de nuestros clientes, y convertir sus
 			proyectos en realidades. Si buscas una empresa de confianza para llevar
