fix: changing names and links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,14 @@
-<footer class="bg-contrast text-white p-4">
+<footer class="md:flex bg-contrast text-white p-4">
 	<nav class="container mx-auto">
 		<ul class="flex flex-col md:flex-row md:justify-center md:items-center">
 			<li class="md:mr-2">
-				Assessors tecnics | Maladeta, 41 – Local | 08016 Barcelona |
+				<a href="/aviso-legal">Aviso legal</a>
 			</li>
 			<li class="md:mr-2">
-				<a href="tel:+34938589096">93 858 90 96 | </a>
+				<a href="/politica-de-privacidad">Politica de privacidad</a>
 			</li>
 			<li class="md:mr-2">
-				<a href="mailto:Assessors tecnics@Assessors tecnics.com"
-					>Assessors tecnics@Assessors tecnics.com</a
-				>
+				<a href="/politica-de-cookies">Politica de cookies</a>
 			</li>
 		</ul>
 	</nav>
