--- a/src/components/ui/Article.astro
+++ b/src/components/ui/Article.astro
@@ -13,10 +13,10 @@ import { Image } from "astro:assets";
 		loading={loading || "lazy"}
 	/>
 	<main>
-		<h1 class="article text-blue-400' font-semibold my-4 md:mb-2 md:mt-0">
+		<h1 class="article text-blue-400' font-semibold my-2 md:mb-2 md:mt-0">
 			{title}
 		</h1>
-		<p class="text-pretty">
+		<p class="text-pretty text-sm">
 			{description}
 		</p>
 	</main>
