--- a/src/pages/servicios.astro
+++ b/src/pages/servicios.astro
@@ -13,7 +13,7 @@ const articles = [
 	{
 		title: "Vestibulos",
 		description:
-			"El vestíbulo de tu edificio es la carta de presentación de tu comunidad de vecinos. En Assessors tecnics te presentamos soluciones integrales para su reforma y rehabilitación, adaptándonos a tus necesidades y presupuesto.",
+			"El vestíbulo de tu edificio es la carta de presentación de tu comunidad de vecinos. En ASSESSORS TECNICS te presentamos soluciones integrales para su reforma y rehabilitación, adaptándonos a tus necesidades y presupuesto.",
 		src: "/images/vestibulo.webp",
 		alt: "Imagen de un vestibulo",
 	},
@@ -41,14 +41,14 @@ const articles = [
 	{
 		title: "Impermeabilizacion de terrazas",
 		description:
-			"Las filtraciones de agua pueden ser un problema serio en tu hogar. En Assessors tecnics te ofrecemos soluciones personalizadas de impermeabilización de terrazas, para que puedas disfrutar de tu espacio exterior sin preocupaciones.",
+			"Las filtraciones de agua pueden ser un problema serio en tu hogar. En ASSESSORS TECNICS te ofrecemos soluciones personalizadas de impermeabilización de terrazas, para que puedas disfrutar de tu espacio exterior sin preocupaciones.",
 		src: "/images/impermeabilizacion.webp",
 		alt: "imagen de un tejado impermeabilizado",
 	},
 	{
 		title: "Reforma integral de pisos y locales",
 		description:
-			"En Assessors tecnics nos enfocamos en soluciones personalizadas de reforma integral de pisos y locales, adaptadas a las necesidades y presupuesto de cada cliente, para cumplir con las expectativas.",
+			"En ASSESSORS TECNICS nos enfocamos en soluciones personalizadas de reforma integral de pisos y locales, adaptadas a las necesidades y presupuesto de cada cliente, para cumplir con las expectativas.",
 		src: "/images/reforma_integral.webp",
 		alt: "imagen de un piso en reformas",
 	},
@@ -71,8 +71,8 @@ const articles = [
 	>
 		La mejora de tus espacios está en nuestras manos
 	</h1>
-	<h2 class="text-2xl font-semibold my-10 text-center">
-		Assessors tecnics ofrece servicios de rehabilitación y reformas
+	<h2 class="text-1xl md:text-2xl font-semibold my-10 text-center">
+		ASSESSORS TECNICS ofrece servicios de rehabilitación y reformas
 		integrales para edificios, locales y viviendas. Nos especializamos en
 		transformar espacios en entornos funcionales, estéticos y modernos,
 		adaptándonos a las necesidades específicas de cada cliente.
