--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -5,10 +5,10 @@ import { Image } from "astro:assets";
 import { Icon } from "astro-icon/components";
 ---
 
-<Section bgColor="bg-contrast" textColor="text-white">
+<Section bgColor="bg-contrast" textColor="text-white" justify="left">
 	<div class="grid grid-cols-1 grid-rows-1 gap-4">
-		<div>
-			<h2 class=" text-2xl">CONTACTO</h2>
+		<div class="my-7">
+			<h2 class="mb-4 text-2xl text-center">CONTACTO</h2>
 			<!-- <LeafMap latitude={41.6102953} longitude={2.5192323} zoom={10} /> -->
 			<Image
 				src="/images/map.webp"
@@ -19,26 +19,31 @@ import { Icon } from "astro-icon/components";
 			/>
 		</div>
 		<div class="flex flex-col">
-			<div class="flex flex-row items-center">
-				<Icon
-					name="mdi:google-maps"
-					class="text-primary-600 mr-3 text-xl"
-				/>
-				<span>Rambla Sant Martí, 46, Arenys de munt</span>
+			<div class="flex flex-row items-center justify-start">
+				<div class="inline-block mr-4">
+					<Icon name="mdi:google-maps" class="text-primary-600" />
+				</div>
+				<span class="text-base"
+					>Rambla Sant Martí, 46, Arenys de munt</span
+				>
 			</div>
-			<div class="flex flex-row items-center">
-				<Icon
-					name="material-symbols-light:mail-outline"
-					class="text-primary-600 mr-3 text-xl"
-				/>
-				<span>elrostidorarenysdemunt@gmail.com</span>
+			<div class="flex flex-row items-center justify-start">
+				<div class="inline-block mr-4">
+					<Icon
+						name="material-symbols-light:mail-outline"
+						class="text-primary-600"
+					/>
+				</div>
+				<a
+					href="mailto:elrostidorarenysdemunt@gmail.com?Subject='Interesado%20en%20contratar"
+					>elrostidorarenysdemunt@gmail.com</a
+				>
 			</div>
-			<div class="flex flex-row items-center">
-				<Icon
-					name="mdi-light:phone"
-					class="text-primary-600 mr-3 text-xl"
-				/>
-				<span>93 793 71 07</span>
+			<div class="flex flex-row items-center justify-start">
+				<div class="inline-block mr-4">
+					<Icon name="mdi-light:phone" class="text-primary-600" />
+				</div>
+				<a href="tel:+34938589096">93 793 71 07</a>
 			</div>
 		</div>
 	</div>
