--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -3,7 +3,7 @@ const { color } = Astro.props;
 ---
 
 <form class="md:px-4 w-full">
-	<div class="border-b border-gray-900/10 ">
+	<div class=" border-gray-900/10 ">
 		<h1 class=`text-2xl text-${color}`>DEJANOS TUS DUDAS</h1>
 
 		<div class="mt-10 grid grid-cols-1 gap-x-6 md:gap-x-4 gap-y-8 sm:grid-cols-6">
