--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,11 +14,11 @@ import "@fontsource-variable/karla";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta
 			name="description"
-			content="Assessors tecnics es una empresa dedicada tanto a la rehabilitacion como a la obra nueva. Mas de 10 años nos avalan, con proyectos y clientes satisfechos."
+			content="ASSESSORS TECNICS es una empresa dedicada tanto a la rehabilitacion como a la obra nueva. Mas de 10 años nos avalan, con proyectos y clientes satisfechos."
 		/>
-		<title>Assessors tecnics</title>
+		<title>ASSESSORS TECNICS</title>
 	</head>
-	<body class=" ">
+	<body class="">
 		<Header />
 		<slot />
 		<Footer />
