--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,4 +18,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 p {
 	font-family: var(--font-body);
+	font-size: 16px;
+	text-wrap: pretty;
+}
+a {
+	cursor: pointer;
 }
