--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Contacto from "@/components/Contacto.astro";
 import Nosotros from "@/components/Nosotros.astro";
 import Servicios from "@/components/Servicios.astro";
 import Obras from "@/components/Obras.astro";
-import Promociones from "@/components/Promociones.astro";
+import Newsletter from "@/components/Newsletter.astro";
 import Info from "@/components/Info.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
@@ -15,7 +15,7 @@ import Layout from "@/layouts/Layout.astro";
 		<div class="md:grid md:grid-cols-6 md:grid-rows-8">
 			<div class="md:row-span-3 md:col-span-4"><Obras /></div>
 			<div class=" md:col-span-2 md:row-span-4 md:col-start-5">
-				<Promociones />
+				<Newsletter />
 			</div>
 			<div class="md:col-span-4 md:row-span-2 md:row-start-4">
 				<Info />
