--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
 	--color-primary-500: #EB8834;
 	--color-primary-600: #e67617;
 	--color-contrast: #323335;
+	--color-contrast2: #cab4b4;
 }
 
 body {
