--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,12 +2,12 @@
 import { Image } from "astro:assets";
 ---
 
-<header class="bg-contrast text-black  p-4">
+<header class="bg-contrast2  p-4">
 	<nav class=" max-w-7xl mx-auto flex flex-row justify-around items-center">
 		<div class="inline-block">
 			<a href="/">
 			<Image
-				src="/images/logo.webp"
+				src="/images/logo.png"
 				alt="logo de la empresa"
 				width={200}
 				height={200}
@@ -16,7 +16,7 @@ import { Image } from "astro:assets";
 			/></a>
 		</div>
 		<ul
-			class="hidden md:flex md:flex-row md:justify-between md:items-center md:grow-[0.5] text-white"
+			class="hidden md:flex md:flex-row md:justify-between md:items-center md:grow-[0.5] text-black"
 		>
 			<li><a href="/">Inicio</a></li>
 			<li><a href="/servicios/">Servicios</a></li>
